ido-tth/main/default/objects/tth_Party__c/tth_Party__c.object-meta.xml
<CustomObject>
    <description>Enables multiple travelers to be grouped together on a single trip</description>
    <label>Party</label>
    <nameField>
        <displayFormat>PARTY {0}</displayFormat>
        <label>Party ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>