ido-tth/main/default/objects/tth_Party__c/fields/tth_Account__c.field-meta.xml
<CustomField>
    <fullName>tth_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This isn&#39;t really a field that is actually used, rather it is to provide a bit of a work around when using PersonAccounts in combo with SFDX data import. There&#39;s a few workflows hooked into this field to populate the Contact/Traveler Master Detail</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DO NOT USE - Parties</relationshipLabel>
    <relationshipName>DO_NOT_USE_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>