ido-tth/main/default/objects/tth_Party__c/fields/tth_Party_Member__c.field-meta.xml
<CustomField>
    <fullName>tth_Party_Member__c</fullName>
    <description>The traveler who is part of the party</description>
    <label>Party Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Travel Parties</relationshipLabel>
    <relationshipName>Parties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>