ido-tth/main/default/objects/tth_Party__c/fields/tth_Trip__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip__c</fullName>
    <label>Trip</label>
    <referenceTo>tth_Trip__c</referenceTo>
    <relationshipLabel>Party Members</relationshipLabel>
    <relationshipName>PartyMembers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>